[package]
name = "tiny-hderive"
version = "0.2.1"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "GPL-3.0"
description = "Tiny BIP44/BIP32 derivation for BIP39 seeds"
documentation = "https://docs.rs/tiny-hderive"
homepage = "https://github.com/maciejhirsz/tiny-hderive"
repository = "https://github.com/maciejhirsz/tiny-hderive"
keywords = ["bitcoin", "ethereum", "bip32", "bip39", "bip44"]

[dependencies]
# libsecp256k1 = "0.2"
k256 = {version="*", default-features = false, features=["ecdsa", "keccak256", "arithmetic"]}
# base58 = {version="0.1.0", default-features=false}
sha2 = {version="0.8.0", default-features=false}
hmac = {version="0.7.0", default-features=false}
# memzero = {version="0.1.0", default-features=false}
heapless = "*"

[dev-dependencies]
ethsign = { version = "0.3", default-features = false, features = ["secp256k1-rs"] }
tiny-bip39 = {git="https://github.com/TheRealBluesun/tiny-bip39", branch="no_std", default-features=false}
